Fix gap between videos

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -61,8 +61,7 @@
 .videos__container {
   display: flex;
   flex-wrap: wrap;
-
-  gap: 25px;
+  gap: 10px;
 }
 
 .descripcion-video {
